# sparse-steer

./: .env.example  .gitignore  README.md  STATUS.md  TASK.md  config.yaml  pyproject.toml  run.py
configs/: caa.yaml  config.yaml  dense.yaml  sparse.yaml
experiments/: launch.sh  launch_old.sh  parse_old.py  parse_result.py  results.jsonl  status.sh
report/: FINDINGS.md  sparse_steering.md
scripts/: backfill_mc0.py  caps_runner.py  check_answer_mask.py  compare_backends_tqa.py  dense_strength_sweep.py  download_lofit_split.py  emit_grid_jobs.py  emit_iti_faithful.py  emit_sparse_extra.py  gate_density.py  gate_init_sweep.py  gen_compare.py  gen_compare_tqa.py  gen_sleeper_examples.py  grid_runner.py  harvest_tqa.py  inspect_truthfulqa.py  leaderboard_anchor.py  length_bias_diagnostics.py  mcq_mode_sweep.py  pinpoint_divergence.py  plot_comparison.py  plot_frontiers.py  plot_frontiers_paper.py  plot_method_matrix.py  plot_results.py  plot_truthfulqa_compare.py  reproduce.sh  run_caps.sh  run_comparison.py  run_grid.py  run_grid.sh  run_v2_sweep.sh  score_sleeper_battery.py  seed_caps.py  smol_sparse_sweep.py  sweep_fold_mean.py  sweep_promote.py  sweep_sleeper.sh  sweep_tqa.sh  (+2 more)
sparse_steer/: __init__.py  experiment.py  extract.py  generate.py  hardconcrete.py  objectives.py  steering.py  train.py
tests/: test_cache_keys.py  test_dense_steering.py  test_extract.py  test_hf_backend.py  test_judge_prompt.py  test_mlp_steering.py  test_refusal.py  test_selection.py  test_set_all_steering.py  test_sourcing.py  test_wiring.py  tiny.py
tools/: download_lofit_split.py  (+2 more)
(+187 files in other folders)
